archetect-templating/tests/snapshots/test_templates__vm@loop_dictsort.txt.snap
---
source: archetect_templating/tests/test_templates.rs
description: "{%- for key, value in map|dictsort %}\n* {{ key }}: {{ value }}\n{%- endfor %}"
info:
  map:
    bar: 2
    baz: 100
    blafasel: aha
    foo: 1
input_file: archetect_templating/tests/inputs/loop_dictsort.txt
---

* bar: 2
* baz: 100
* blafasel: aha
* foo: 1

