archetect-templating/tests/snapshots/test_templates__vm@loop_else2.txt.snap
---
source: archetect_minijinja/tests/test_templates.rs
description: "{%- for item in seq %}\n  - {{ item }}\n{%- else %}\n  should not happen\n{%- endfor %}"
info:
  seq:
    - 1
    - 2
    - 3
input_file: archetect_minijinja/tests/inputs/loop_else2.txt
---

  - 1
  - 2
  - 3

