archetect-templating/tests/snapshots/test_templates__vm@loop_over_none.txt.snap
---
source: archetect_minijinja/tests/test_templates.rs
description: "[{% for item in seq %}{% endfor %}]"
info:
  seq: ~
input_file: archetect_minijinja/tests/inputs/loop_over_none.txt
---
[]

