archetect-templating/tests/snapshots/test_templates__vm@loop_over_string.txt.snap
---
source: archetect_templating/tests/test_templates.rs
description: "{% for char in \"abcdefg\" -%}\n  {{ char }}\n{% endfor %}"
info: {}
input_file: archetect_templating/tests/inputs/loop_over_string.txt
---
a
b
c
d
e
f
g


