archetect-templating/tests/snapshots/test_templates__vm@loop_over_undefined.txt.snap
---
source: archetect_templating/tests/test_templates.rs
description: "[{% for item in seq %}{% endfor %}]"
info: {}
input_file: archetect_templating/tests/inputs/loop_over_undefined.txt
---
[]

