archetect-templating/tests/snapshots/test_templates__vm@macro_import2.txt.snap
---
source: archetect_templating/tests/test_templates.rs
description: "{% import \"include_with_var_and_macro.txt\" as helpers -%}\n{{ helpers }}\nmissing: {{ helpers.missing }}\ntitle: {{ helpers.title }}\nhelper: {{ helpers.helper(\"a\", \"b\") }}"
info:
  c: The C Variable
input_file: archetect_templating/tests/inputs/macro_import2.txt
---
{"helper": <macro helper>, "title": "The Title"}
missing: 
title: The Title
helper: ["a", "b", "The C Variable"]

