archetect-templating/tests/snapshots/test_templates__vm@macro_recursive.txt.snap
---
source: archetect_templating/tests/test_templates.rs
description: "{%- macro nest(children) -%}\n    <nest>\n    {%- for child in children -%}\n        <child>{{ nest(child.children) }}</child>\n    {%- endfor -%}\n    </nest>\n{%- endmacro -%}\n{{ nest(top_level) }}"
info:
  top_level:
    - children:
        - children: []
        - children: []
    - children:
        - children: []
input_file: archetect_templating/tests/inputs/macro_recursive.txt
---
<nest><child><nest><child><nest></nest></child><child><nest></nest></child></nest></child><child><nest><child><nest></nest></child></nest></child></nest>

